avoid double scrollbars on nested highlight pre blocks

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -96,6 +96,10 @@ body {
   .highlight {
     overflow-x: auto;
     max-width: 100%;
+
+    pre {
+      overflow-x: visible;
+    }
   }
 
   img,
